--- a/ncmpp/ncmpp.vcxproj
+++ b/ncmpp/ncmpp.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\cmdline.h" />
     <ClInclude Include="src\pool.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
